--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
-<html>
+<html lang"es">
     <head>
+        <meta charset="UTF-8">
         <title>El titulo del post es este</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
@@ -30,6 +31,8 @@
                     </p>
                     <p>Suscribete y dale like</p>
              </div>
+	     <div id="footer">
+		     Hecho con amor en Platzi &lt;3
          </div>
     </body>
 </html>
