--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
                         cosas increíbles que se 
                         pueden hacer con ramas
                     </p>
+                    <p><a href ="https://imgur.com/DVbEUXX">
+                    <img src="https://i.imgur.com/DVbEUXX.jpg" width="100%"
+                    title="descripcion de la imagen" /></a></p>
                     <p>Los blogs son la mejor
                     forma de compartir
                     información y tus ideas mucho mas
